# yolo_cpp

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/darknet/: CMakeLists.txt  art.cpp  cifar.cpp  compare.cpp  darknet.cpp  demo.cpp  demo.h  detector.cpp  dice.cpp  go.cpp  rnn.cpp  rnn_vid.cpp  super.cpp  swag.cpp  tag.cpp  voxel.cpp  writing.cpp  yolo.cpp
app/darknet++/: CMakeLists.txt  darknet++.cpp
app/server/: CMakeLists.txt  echoserver.cpp  echoserver.h  main.cpp
service/: app.py  app.py~  client.py
src/: CMakeLists.txt  activation_layer.cpp  activation_layer.h  activations.h  avgpool_layer.cpp  avgpool_layer.h  batchnorm_layer.cpp  batchnorm_layer.h  blas.h  box.cpp  box.h  classifier.cpp  classifier.h  coco.cpp  col2im.cpp  col2im.h  connected_layer.cpp  connected_layer.h  convolutional_layer.cpp  cost_layer.cpp  cost_layer.h  crnn_layer.cpp  crnn_layer.h  crop_layer.cpp  crop_layer.h  cuda.cpp  cuda.h  data.cpp  data.h  deconvolutional_layer.cpp  deconvolutional_layer.h  detection_layer.cpp  detection_layer.h  dropout_layer.cpp  dropout_layer.h  gemm.cpp  gemm.h  gru_layer.cpp  im2col.h  image.cpp  (+29 more)
yolo++/: CMakeLists.txt  greet_ext.cpp  object.h  yolo.cpp  yolo.h  yolopy.cpp
